# NOKIA-PK

./: .gitignore  README.md
.github/workflows/: ccpp.yml
BTS/Tests/Application/: ApplicationTestSuite.cpp
UE/: CMakeLists.txt  main.cpp
UE/Application/: Application.cpp  Application.hpp  CMakeLists.txt  Context.hpp  IEventsHandler.hpp
UE/Application/Database/: CMakeLists.txt  IDatabase.hpp  SmsDatabase.cpp  SmsDatabase.hpp
UE/Application/Database/Entity/: Sms.cpp  Sms.hpp
UE/Application/Database/Repository/: ICrudRepository.hpp  IOrm.hpp  ISmsRepository.hpp  Orm.hpp  SmsOrm.hpp  SmsRepository.cpp  SmsRepository.hpp
UE/Application/Database/Schema/: databaseSchema.sql  smsDatabase.db  smsSchema.sql  smsdatabase.db
UE/Application/Ports/: BtsPort.cpp  BtsPort.hpp  IBtsPort.hpp  ISmsDatabasePort.hpp  ITimerPort.hpp  IUserPort.hpp  SmsDatabasePort.cpp  SmsDatabasePort.hpp  TimerPort.cpp  TimerPort.hpp  UserPort.cpp  UserPort.hpp
UE/Application/States/: BaseState.cpp  BaseState.hpp  ConnectedState.cpp  ConnectedState.hpp  ConnectingState.cpp  ConnectingState.hpp  TalkingState.cpp  TalkingState.hpp
UE/Application/include/sqlite_orm/: sqlite_orm.h
UE/ApplicationEnvironment/: CMakeLists.txt
UE/QtApplicationEnvironment/: ApplicationEnvironment.cpp  CMakeLists.txt
UE/QtApplicationEnvironment/GUI/: CMakeLists.txt  QtCallMode.cpp  QtCallMode.hpp  QtUeGui.cpp
UE/Tests/Application/: ApplicationTestSuite.cpp  CMakeLists.txt
UE/Tests/Application/Mocks/: IBtsPortMock.cpp  IBtsPortMock.hpp  ICrudSmsRepositoryMock.cpp  ICrudSmsRepositoryMock.hpp  IOrmMock.hpp  (+6 more)
(+3 files in other folders)
